# shai-payoneer-exam

./: Jenkinsfile  README.md  deploy.sh  docker-compose.yaml  test.sh
python/: Dockerfile  pyproject.toml
python/app/: api.py
