[tool.poetry]
name = "shai-exam"
version = "0.1.0"
description = "python web 'count-service' app that counts the number of POST requests"
authors = ["Shai Test"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70"
uvicorn = "^0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
